# damm-v1-sdk

common/: Cargo.toml
dynamic-amm-quote/: Cargo.toml
dynamic-amm-quote/src/depeg/: marinade.rs  spl_stake.rs
programs/dynamic-amm/: Cargo.toml
programs/dynamic-amm/src/: state.rs
programs/dynamic-vault/: Cargo.toml
programs/dynamic-vault/src/: state.rs
rust-client/: Cargo.toml
