[package]
name = "common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anchor-lang = { version = "0.31" }
anchor-spl = "0.31"
solana-sdk = { version = "2" }
spl-associated-token-account = "6"
mpl-token-metadata = "5"
dynamic-amm = { path = "../programs/dynamic-amm" }
dynamic-vault = { path = "../programs/dynamic-vault" }
lazy_static = "1.4.0"

[features]
devnet = []
