[package]
name = "dynamic-amm-quote"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_amm_quote"

[dependencies]
anchor-lang = "0.31"
anchor-spl = "0.31"
prog_dynamic_amm = { path = "../programs/dynamic-amm", package = "dynamic-amm" }
prog_dynamic_vault = { path = "../programs/dynamic-vault", package = "dynamic-vault" }
anyhow = "1.0.57"
spl-token-swap = { git = "https://github.com/Syrax-AI/solana-program-library.git" }
meteora-marinade-sdk = { git = "https://github.com/Syrax-AI/meteora-marinade-sdk.git", features = [
    "cpi",
] }
spl-stake-pool = { version = "^2.0", features = ["no-entrypoint"] }
meteora-stable-swap-math = { git = "https://github.com/Syrax-AI/stable-swap", package = "stable-swap-math" }
meteora-stable-swap-client = { git = "https://github.com/Syrax-AI/stable-swap", package = "stable-swap-client" }
borsh = "0.10.3"
borsh-derive = "1.5.7"

[dev-dependencies]
solana-program-test = "2"
anchor-client = "0.31"
solana-sdk = "2"
bincode = "1.3.3"
