[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anchor-lang = "0.31"
anchor-spl = "0.31"
anchor-client = "0.31"
clap = { version = "3.2.25", features = ["derive", "env"] }
solana-program = "2"
solana-rpc-client = "2"
solana-sdk = "2"
spl-associated-token-account = "6"
anyhow = "1.0.57"
spl-token = "8"
zeroize = "1.7"
bincode = "1.3.3"
serde = "1.0.137"
serde_json = "1.0.102"
mpl-token-metadata = "5"
prog_dynamic_amm = { path = "../programs/dynamic-amm", package = "dynamic-amm" }
prog_dynamic_vault = { path = "../programs/dynamic-vault", package = "dynamic-vault" }
regex = "1"
dynamic-amm-quote = { path = "../dynamic-amm-quote" }
common = { path = "../common" }
